syntax = "proto3";
package hashicorp.nomad.client.connat.proto;
option go_package = "proto";

service ConNat {
    rpc Start(StartRequest) returns (StartResponse) {}
    rpc Stop(StopRequest) returns (StopResponse) {}
}

message StartRequest {
    // config options
}

message StartResponse {
}

message StopRequest {}

message StopResponse {}
